--- a/proyecto/cartech_web/incidencias/templates/mis_incidencias.html
+++ b/proyecto/cartech_web/incidencias/templates/mis_incidencias.html
@@ -26,6 +26,10 @@
                         <div class="block-4 text-center border">
                             <div class="block-4-text p-4">
                                 <p class="mb-0">Titulo: {{ incidencia.titulo }}</p>
+                                <p class="mb-0">{{ incidencia.descripcion }}</p>
+                                {% if incidencia.pedido %}
+                                <p class="mb-0">Pedido asociado:{{ incidencia.pedido.id_pedido }}</p>
+                                {% endif %} 
                                 <p class="text-primary font-weight-bold">Urgencia: {{ incidencia.urgencia }}</p>
                             </div>
                         </div>
