--- a/proyecto/cartech_web/opiniones/templates/listar_opiniones.html
+++ b/proyecto/cartech_web/opiniones/templates/listar_opiniones.html
@@ -28,8 +28,7 @@
 
                         </div>
                         <button type="submit" class="btn btn-primary btn-sm">Aplicar Filtro</button>
-                        <button type="button" class="btn btn-secondary btn-sm" onclick="resetFilters(event)">Resetear
-                            Filtros</button>
+                        <button type="button" class="btn btn-secondary btn-sm" onclick="resetFilters(event)">Resetear Filtros</button>
                     </form>
                 </div>
                 <div class="col-md-9 order-2">
