--- a/proyecto/cartech_web/opiniones/templates/mis_opiniones.html
+++ b/proyecto/cartech_web/opiniones/templates/mis_opiniones.html
@@ -6,7 +6,7 @@
 <div class="bg-light py-3">
     <div class="container">
         <div class="row">
-            {% with base_url="/" %}
+            {% with base_url="/opiniones" %}
             <div class="col-md-12 mb-0"><a href="{{ base_url }}">Opiniones</a> <span class="mx-2 mb-0">/</span> <strong
                     class="text-black">Mis opiniones</strong></div>
             {% endwith %}
