--- a/proyecto/cartech_web/pedidos/templates/mis_pedidos.html
+++ b/proyecto/cartech_web/pedidos/templates/mis_pedidos.html
@@ -6,8 +6,8 @@
 <div class="bg-light py-3">
     <div class="container">
         <div class="row">
-            {% with base_url="/pedidos/" %}
-            <div class="col-md-12 mb-0"><a href="{{ base_url }}">Pedidos</a> <span class="mx-2 mb-0">/</span> <strong
+            {% with base_url="/" %}
+            <div class="col-md-12 mb-0"><a href="{{ base_url }}">Home</a> <span class="mx-2 mb-0">/</span> <strong
                     class="text-black">Mis pedidos</strong></div>
             {% endwith %}
 
