--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -75,9 +75,9 @@
                 <ul class="site-menu js-clone-nav d-none d-md-block">
                     <li><a href="/">Home</a></li>
                     <li><a href="{% url "shop:selector" %}">Configurador coches</a></li>
-                    <li><a href="/incidencias/">Incidencias</a></li>
+                    <li><a href="{% url "incidencias:pagina_base" %}">Incidencias</a></li>
                     <li><a href="{% url "pedidos:mis_pedidos" %}">Mis pedidos</a></li>
-                    <li><a href="{% url "opiniones:crear_opinion" %}">Opiniones</a></li>
+                    <li><a href="{% url "opiniones:pagina_base" %}">Opiniones</a></li>
                     <li><a href="{% url "shop:about" %}">About</a></li>
                     <li><a href="{% url "shop:contact" %}">Contact</a></li>
                 </ul>
