feat:Compra con usuario invitado
Se puede comprar con un usuario como invitado

--- a/proyecto/cartech_web/templates/registration/login.html
+++ b/proyecto/cartech_web/templates/registration/login.html
@@ -24,6 +24,7 @@
                         </div>
                     </form>
                     <p class="text-center">¿No tienes una cuenta? <a href="{% url 'signup' %}">Regístrate aquí</a></p>
+                    <p class="text-center">¿No quieres registrarte? <a href="{% url 'create_default_user' %}">Entra como invitado</a></p>
                 </div>
             </div>
         </div>
