--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -65,6 +65,7 @@
                     <li><a href="{% url "pedidos:listar_pedidos" %}">Pedidos</a></li>
                     <li><a href="{% url "incidencias:listar_incidencias" %}">Incidencias</a></li>
                     <li><a href="{% url "opiniones:listar_opiniones" %}">Opiniones</a></li>
+                    <li><a href="{% url "shop:estadisticas_base" %}">Estadísticas</a></li>
                     <li><a href="{% url "shop:about" %}">About</a></li>
                     <li><a href="{% url "shop:contact" %}">Contact</a></li>
                 </ul>
