--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -63,7 +63,7 @@
                     <li><a href="{% url "shop:listado_coches" %}">Coches</a></li>
                     <li><a href="{% url "shop:listado_accesorios" %}">Accesorios</a></li>
                     <li><a href="{% url "pedidos:listar_pedidos" %}">Pedidos</a></li>
-                    <li><a href="{% url "incidencias:listar_incidencias" %}">Incidencias</a></li>
+                    <li><a href="{% url "incidencias:pagina_base" %}">Incidencias</a></li>
                     <li><a href="{% url "opiniones:listar_opiniones" %}">Opiniones</a></li>
                     <li><a href="{% url "shop:estadisticas_base" %}">Estadísticas</a></li>
                     <li><a href="{% url "user_list" %}">Usuarios</a></li>
