--- a/proyecto/cartech_web/shop/templates/estadisticas/estadisticas_accesorios.html
+++ b/proyecto/cartech_web/shop/templates/estadisticas/estadisticas_accesorios.html
@@ -39,7 +39,7 @@
                     <h2>Estadísticas Generales</h2>
                 </div>
                 <div class="card-body">
-                    <p><strong>Has vendido:</strong> {{ numero_accesorios_vendidos }}<strong> accesorios</strong></p>
+                    <p><strong>Has vendido:</strong> {{ numero_accesorios_vendidos }}<strong> accesorios distintos</strong></p>
                     <p><strong>Por los que has recibido:</strong> {{ dinero_ganado_accesorios }}€</p>
                 </div>
             </div>
