--- a/proyecto/cartech_web/shop/templates/estadisticas/estadisticas_coches.html
+++ b/proyecto/cartech_web/shop/templates/estadisticas/estadisticas_coches.html
@@ -51,8 +51,7 @@
                     <h2>Pedidos</h2>
                 </div>
                 <div class="card-body">
-                    <p><strong>Se han realizado:</strong> {{ total_pedidos }}<strong> pedidos</strong></p>
-                    <p><strong>Con los que has recaudado:</strong> {{ dinero_total_recaudado }}€</p>
+                    <p><strong>Se han realizado:</strong> {{ num_pedidos }}<strong> pedidos</strong></p>
                 </div>
             </div>
         </div>
