--- a/proyecto/cartech_web/opiniones/templates/seleccionar_eleccion.html
+++ b/proyecto/cartech_web/opiniones/templates/seleccionar_eleccion.html
@@ -51,8 +51,7 @@ Detalles del Pedido
 
                 <hr class="my-3">
                 <p class="card-text font-weight-bold">
-                  Precio total:
-                  {% if eleccion.get_precio_total < 25000 %} {% with gastos_envio=200 %} {{ eleccion.get_precio_total|add:gastos_envio }}€ (con gastos de envío) {% endwith %} {% else %} {{eleccion.get_precio_total }}€ {% endif %} </p>
+                  Precio total: {{eleccion.get_precio_total }}€  </p>
                 <a href="{% url 'opiniones:crear_opinion' eleccion.id %}">
                     <button type="button" class="btn btn-warning" name="opinar">Dejar una reseña</button>
                 </a>
