--- a/proyecto/cartech_web/carrito/templates/payment_form.html
+++ b/proyecto/cartech_web/carrito/templates/payment_form.html
@@ -1,3 +1,9 @@
+{% extends "base/base.html" %}
+{% load static %}
+{% block title %}
+Carrito
+{% endblock %}
+{% block content %}
 <!-- Agrega las siguientes líneas en el head de tu HTML para incluir Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -30,3 +36,4 @@
         <button type="submit" class="btn btn-primary">Pay Now</button>
     </div>
 </form>
+{% endblock %}
