--- a/proyecto/cartech_web/shop/static/css/style.css
+++ b/proyecto/cartech_web/shop/static/css/style.css
@@ -66,11 +66,7 @@ a {
     color: #000; }
   .btn.btn-sm {
     font-size: 14px !important;
-    padding: 10px 20px !important;
-    color: white;
-    background-color: #164CA7;
-    border-color: #164CA7;
-  }
+    padding: 10px 20px !important; }
   .btn.btn-primary {
     font-size: 17px;
     font-weight: 300;
