--- a/proyecto/cartech_web/shop/templates/coches/detail.html
+++ b/proyecto/cartech_web/shop/templates/coches/detail.html
@@ -74,6 +74,8 @@
                 {% else %}
                   <a class="btn btn-secondary" href="{% url 'login' %}">Accede como invitado o inicia sesion.</a>
                 {% endif %}
+                  <button type="submit" class="btn btn-outline-primary" name="ya">Comprar ya</button>
+
               {% else %}
                 <button type="button" class="btn btn-secondary" disabled>Producto Agotado</button>
               {% endif %}
